added support for Hey, autofocus the instructions field

--- a/popup/draft_email.html
+++ b/popup/draft_email.html
@@ -19,7 +19,7 @@
         <textarea readonly type="text" id="selectedtext" name="selectedtext" required></textarea>
         <br/>
         <br/>
-        <label for="instructions">Instructions:</label>
+        <label for="instructions">Additional Instructions (Optional):</label>
         <br/>
         <input type="text" id="instructions" name="instructions"></input>
         <br/>
