hey doesn't work, allow option to paste in text for unsupported clients

--- a/popup/draft_email.html
+++ b/popup/draft_email.html
@@ -16,7 +16,7 @@
         <br/>
         <label for="selectedtext">Selected Text:</label>
         <br/>
-        <textarea readonly type="text" id="selectedtext" name="selectedtext" required></textarea>
+        <textarea type="text" id="selectedtext" name="selectedtext" required></textarea>
         <br/>
         <br/>
         <label for="instructions">Additional Instructions (Optional):</label>
