--- a/popup/draft_email.html
+++ b/popup/draft_email.html
@@ -8,7 +8,7 @@
     <p id="message"></p>
     <h3>✉️ GPTemail</h3>
     <form autocomplete="off">
-        <label for="user">User:</label>
+        <label for="user">User (Your Name):</label>
         <input type="text" id="user" name="user" required>
         <br/>
         <span id="llm-provider-section">LLM Provider</span>
@@ -40,6 +40,7 @@
     <br/>
     <textarea readonly type="text" id="result" name="result" required></textarea>
     <br>
+    <script src="browser-polyfill.min.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
